--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/** BODY CSS**/
+.body{
+    margin: 0;
+    padding: 0;
+    font-family: "Segoe UI";
+    background-color: #f5a71f;
+}
 
 /** NAVBAR CSS**/
 .navbar {
@@ -11,8 +18,6 @@
 }
 .logo{
     display: inline-block;
-    float:left;
-    max-width: 400px;
 }
 .navbar ul{
     list-style-type: none; /*Removes bullets/numbering*/
@@ -23,8 +28,24 @@
 .navbar li{
     display: inline; /*Make horizontal*/
     padding: 10px; /*Spacing between*/
-    font-family: "Segoe UI Black";
+    text-transform: uppercase;
+    font-family: "Helvetica";
+    font-weight: bolder;
     font-size: 26px;
+}
+.navbar a{
+    text-decoration: none;
     color: #f5a71f;
 }
 
+/*HERO CSS*/
+.hero{
+    padding: 50px;
+    border: 0;
+}
+.hero-title{
+    font-family: "Helvetica";
+    font-weight: bolder;
+    font-size: 56px;
+    inline-size: 450px;
+}
