--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 /** BODY CSS**/
+*{
+    margin: 0;
+    padding: 0;
+}
 .body{
     margin: 0;
     padding: 0;
@@ -10,14 +14,15 @@
 .navbar {
     background-color: #ddd;
     display: flex;
-    padding: 20px 0;
 }
-.navbar .container{
+.container{ /*Adds padding at the side for all elements*/
     margin-left: auto;
     margin-right: auto;
+    padding: 20px 100px;
 }
 .logo{
     display: inline-block;
+    vertical-align: middle;
 }
 .navbar ul{
     list-style-type: none; /*Removes bullets/numbering*/
@@ -40,12 +45,25 @@
 
 /*HERO CSS*/
 .hero{
-    padding: 50px;
+    padding: 0;
     border: 0;
 }
+.hero-image{
+    background-image: linear-gradient(rgba(0,0,0,0.8),
+    rgba(0,0,0,0.4)),
+    url("img/hero.jpeg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    padding: 140px 0;
+
+}
 .hero-title{
+    padding-left: 50px;
     font-family: "Helvetica";
     font-weight: bolder;
     font-size: 56px;
     inline-size: 450px;
+    color: #fff;
 }
