--- a/about-styles.css
+++ b/about-styles.css
@@ -2,6 +2,8 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: "Helvetica", Arial;
 }
 .body{
     margin: 0;
@@ -58,3 +60,68 @@
     display: flex;
     justify-content: flex-start;
 }
+
+/*Heading CSS*/
+.heading{
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 20px auto;
+}
+.heading h1{
+    font-size: 56px;
+    color: #000;
+    margin-bottom: 25px;
+    position: relative;
+}
+.heading h1::after{ /*Border*/
+    content:""; /*invisible element*/
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    display: block;
+    margin: 0 auto;
+    background-color: lightslategrey;
+}
+.heading p{
+    color: grey;
+    margin-bottom: 30px;
+}
+.container-main{
+    width: 90%;
+    margin: 0 auto;
+    padding: 10px 20px;
+}
+.about{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.about-img{
+    flex:1;
+    margin-right: 50px;
+    overflow: hidden;
+}
+.about-img img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    transition: 0.5s ease;
+}
+.about-img:hover img{
+    transform: scale(1.2);
+}
+.about-content{
+    flex: 1;
+}
+.about-content h2{
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+.about-content p{
+     line-height: 1.5;
+ }
