--- a/menu-styles.css
+++ b/menu-styles.css
@@ -2,6 +2,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Helvetica, Arial;
 }
 .body{
     margin: 0;
@@ -57,4 +58,34 @@
     border-radius: 15px;
     display: flex;
     justify-content: flex-start;
+}
+
+.heading{
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 20px auto;
+}
+.heading h1{
+    font-size: 56px;
+    color: #000;
+    margin-bottom: 25px;
+    position: relative;
+}
+.heading h1::after{ /*Border*/
+    content:""; /*invisible element*/
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    display: block;
+    margin: 0 auto;
+    background-color: #e61e29;
+}
+.heading p{
+    width: 70%;
+    font-size: 24px;
+    margin-bottom: 30px;
 }
